--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -32,6 +32,7 @@
             <p>Não tem uma conta? <strong>Registre-se</strong></p>
         </form>
     </main>
+    <!-- <div style="width: 572px; margin-top: 150px; border: 1px solid red;"></div> -->
 </body>
 
 </html>
