Refatoração do código

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <p>Não tem uma conta? <strong>Registre-se</strong></p>
         </form>
     </main>
-    <!-- <div style="width: 572px; margin-top: 150px; border: 1px solid red;"></div> -->
+    <!--SCRIPT JS-->
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
