--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <form action="">
             <label for="email">E-mail</label>
-            <input type="" name="email" id="email" placeholder="Digite seu e-mail">
+            <input type="email" name="email" id="email" placeholder="Digite seu e-mail">
             <label for="password">Senha</label>
             <input type="password" name="password" id="password" placeholder="Digite sua senha">
             <div class="custom-checkbox">
